Updating docs with missing classes and cross linking.

--- a/classes/Analytics.html
+++ b/classes/Analytics.html
@@ -129,6 +129,39 @@
                                         <a href="../classes/Mappedin.html">Mappedin</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinCategory.html">MappedinCategory</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirections.html">MappedinDirections</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirective.html">MappedinDirective</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinEvent.html">MappedinEvent</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMap.html">MappedinMap</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMapGroup.html">MappedinMapGroup</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinNode.html">MappedinNode</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinPolygon.html">MappedinPolygon</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVenue.html">MappedinVenue</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVortex.html">MappedinVortex</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MapView.html">MapView</a>
                                     </li>
                                     <li>
@@ -138,7 +171,13 @@
                                         <a href="../classes/MapView3D.html">MapView3D</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Marker.html">Marker</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/Tween.html">Tween</a>
@@ -156,6 +195,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> Analytics Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -166,13 +207,16 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Analytics.js#L4">source/Mappedin.Analytics.js:4</a>
+        </div>
 </div>
 
 
 
   <div class="class-description">
   <p>A class to access the Mappedin Analyitcs platform. Correct usage will improve Smart Search results, and lead to more accurate insights.
-This will be created for you as part of Mappedin.initialize, but you can also create one manually. You are mostly going to use <code>locationSelected</code>.</p>
+This will be created for you as part of Mappedin.<a href="../classes/Mappedin.html#method_initialize" class="crosslink">initialize</a>, but you can also create one manually. You are mostly going to use <code>locationSelected</code>.</p>
 
   </div>
 
@@ -253,6 +297,8 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Analytics.js#L57">source/Mappedin.Analytics.js:57</a>
   		</p>
   
   
@@ -268,7 +314,7 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   			<ul class="params-list">
   				<li class="param">
   						<code class="param-name">category</code>
-  						<span class="type">Category</span>
+  						<span class="type"><a href="../classes/MappedinCategory.html" class="crosslink">MappedinCategory</a></span>
   
   
   					<div class="param-description"><p>The category the user selected.</p>
@@ -307,6 +353,8 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Analytics.js#L73">source/Mappedin.Analytics.js:73</a>
   		</p>
   
   
@@ -322,7 +370,7 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   			<ul class="params-list">
   				<li class="param">
   						<code class="param-name">start</code>
-  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Location" class="crosslink external" target="_blank">Location</a></span>
+  						<span class="type"><a href="../classes/MappedinLocation.html" class="crosslink">MappedinLocation</a></span>
   
   
   					<div class="param-description"><p>The start location for wayfinding.</p>
@@ -331,7 +379,7 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   				</li>
   				<li class="param">
   						<code class="param-name">end</code>
-  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Location" class="crosslink external" target="_blank">Location</a></span>
+  						<span class="type"><a href="../classes/MappedinLocation.html" class="crosslink">MappedinLocation</a></span>
   
   
   					<div class="param-description"><p>The end location for wayfinding.</p>
@@ -367,6 +415,8 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Analytics.js#L43">source/Mappedin.Analytics.js:43</a>
   		</p>
   
   
@@ -385,7 +435,7 @@ This will be created for you as part of Mappedin.initialize, but you can also cr
   			<ul class="params-list">
   				<li class="param">
   						<code class="param-name">location</code>
-  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Location" class="crosslink external" target="_blank">Location</a></span>
+  						<span class="type"><a href="../classes/MappedinLocation.html" class="crosslink">MappedinLocation</a></span>
   
   
   					<div class="param-description"><p>The location the user selected.</p>
