--- a/classes/Search.html
+++ b/classes/Search.html
@@ -129,6 +129,39 @@
                                         <a href="../classes/Mappedin.html">Mappedin</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinCategory.html">MappedinCategory</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirections.html">MappedinDirections</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirective.html">MappedinDirective</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinEvent.html">MappedinEvent</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMap.html">MappedinMap</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMapGroup.html">MappedinMapGroup</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinNode.html">MappedinNode</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinPolygon.html">MappedinPolygon</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVenue.html">MappedinVenue</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVortex.html">MappedinVortex</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MapView.html">MapView</a>
                                     </li>
                                     <li>
@@ -138,7 +171,13 @@
                                         <a href="../classes/MapView3D.html">MapView3D</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Marker.html">Marker</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/Tween.html">Tween</a>
@@ -156,6 +195,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> Search Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -166,12 +207,15 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Search.js#L4">source/Mappedin.Search.js:4</a>
+        </div>
 </div>
 
 
 
   <div class="class-description">
-  <p>A class to access the Mappedin Smart Search API. This will be created for you as part of Mappedin.initialize, but you can also create one manually.</p>
+  <p>A class to access the Mappedin Smart Search API. This will be created for you as part of Mappedin.Mappedin/initailize:method, but you can also create one manually.</p>
 
   </div>
 
@@ -265,6 +309,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Search.js#L111">source/Mappedin.Search.js:111</a>
   		</p>
   
   
@@ -370,6 +416,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Search.js#L165">source/Mappedin.Search.js:165</a>
   		</p>
   
   
@@ -431,6 +479,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.Search.js#L16">source/Mappedin.Search.js:16</a>
           </p>
   
   
