--- a/index.html
+++ b/index.html
@@ -129,6 +129,39 @@
                                         <a href="./classes/Mappedin.html">Mappedin</a>
                                     </li>
                                     <li>
+                                        <a href="./classes/MappedinCategory.html">MappedinCategory</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinDirections.html">MappedinDirections</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinDirective.html">MappedinDirective</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinEvent.html">MappedinEvent</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinMap.html">MappedinMap</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinMapGroup.html">MappedinMapGroup</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinNode.html">MappedinNode</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinPolygon.html">MappedinPolygon</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinVenue.html">MappedinVenue</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/MappedinVortex.html">MappedinVortex</a>
+                                    </li>
+                                    <li>
                                         <a href="./classes/MapView.html">MapView</a>
                                     </li>
                                     <li>
@@ -138,7 +171,13 @@
                                         <a href="./classes/MapView3D.html">MapView3D</a>
                                     </li>
                                     <li>
+                                        <a href="./classes/Marker.html">Marker</a>
+                                    </li>
+                                    <li>
                                         <a href="./classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="./classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
                                         <a href="./classes/Tween.html">Tween</a>
