--- a/modules/Mappedin.html
+++ b/modules/Mappedin.html
@@ -129,6 +129,39 @@
                                         <a href="../classes/Mappedin.html">Mappedin</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinCategory.html">MappedinCategory</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirections.html">MappedinDirections</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinDirective.html">MappedinDirective</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinEvent.html">MappedinEvent</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMap.html">MappedinMap</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinMapGroup.html">MappedinMapGroup</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinNode.html">MappedinNode</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinPolygon.html">MappedinPolygon</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVenue.html">MappedinVenue</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinVortex.html">MappedinVortex</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MapView.html">MapView</a>
                                     </li>
                                     <li>
@@ -138,7 +171,13 @@
                                         <a href="../classes/MapView3D.html">MapView3D</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Marker.html">Marker</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/Tween.html">Tween</a>
@@ -156,19 +195,24 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> Mappedin Module
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+              </a>
     </h1>
 </div>
 
 <div class="content-meta">
 
 
+        <div class="foundat">
+            Defined in: <a href="https://github.com/MappedIn/platform-api/blob/1/Mappedin-web.es.js#L36">Mappedin-web.es.js:36</a>
+        </div>
 
 </div>
 
 
 <div class="module-description page-section">
     <p>The base Mappedin module, that has references to all the other Mappedin objects you need.</p>
-<p>Start with Mappedin.initalize, which will get the data for a Venue from the Mappedin API, and set up a MapView, Search, and Analytics object for you.</p>
+<p>Start with Mappedin.initialize, which will get the data for a Venue from the Mappedin API, and set up a MapView, Search, and Analytics object for you.</p>
 
 </div>
 
@@ -199,6 +243,61 @@
                             </a>
                         </li>
                         <li class="module-class">
+                            <a href="../classes/MappedinCategory.html">
+                                MappedinCategory
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinDirections.html">
+                                MappedinDirections
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinDirective.html">
+                                MappedinDirective
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinEvent.html">
+                                MappedinEvent
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinLocation.html">
+                                MappedinLocation
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinMap.html">
+                                MappedinMap
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinMapGroup.html">
+                                MappedinMapGroup
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinNode.html">
+                                MappedinNode
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinPolygon.html">
+                                MappedinPolygon
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinVenue.html">
+                                MappedinVenue
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/MappedinVortex.html">
+                                MappedinVortex
+                            </a>
+                        </li>
+                        <li class="module-class">
                             <a href="../classes/MapView.html">
                                 MapView
                             </a>
@@ -214,8 +313,18 @@
                             </a>
                         </li>
                         <li class="module-class">
+                            <a href="../classes/Marker.html">
+                                Marker
+                            </a>
+                        </li>
+                        <li class="module-class">
                             <a href="../classes/Search.html">
                                 Search
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/TextLabel.html">
+                                TextLabel
                             </a>
                         </li>
                         <li class="module-class">
